# word-freq-api

./: .gitignore  main.py  pyproject.toml
src/: constants.py  main.py
tests/: test_endpoints.py  test_models.py
