[project]
name = "word-freq-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "google-cloud-bigquery>=3.40.1",
    "httpx>=0.28.1",
    "opentelemetry-sdk>=1.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypika>=0.51.1",
    "pytest>=9.0.2",
]

[tool.fastapi]
entrypoint = "main:app"

[dependency-groups]
dev = [
    "duckdb>=1.5.0",
]
